--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,9 @@
-# Ignore old database files
-olddatabase.db
-database.db
-database_old.db
-database_old2.db
-database.db
-databaseo.db
-database1.db
-database2.db
-d.db
-data.db
-dont.db
+# Ignore all database files
+*.db
 
-# Ignore admin-panel folder
+# Ignore admin panel folder
 admin-panel/
+
 
 
 
